tests/lean/277b.lean.expected.out
277b.lean:8:10-8:16: error: Invalid `⟨...⟩` notation: This notation can only be used when the expected type is an inductive type with a single constructor, but the expected type
  List Point
has 2 constructors
